--- a/referencias.bib
+++ b/referencias.bib
@@ -6,7 +6,7 @@
 
 @Manual{abntex2modelo,
   Title                    = {Modelo Can{\^o}nico de Trabalho Acad{\^e}mico com abnTeX2},
-  Author                   = {abnTeX2},
+  Author                   = {ABNTeX2},
   Organization             = {Equipe abnTeX2},
   Year                     = {2013},
   Annote                   = {Este documento {\'e} derivado do \cite{abnt-bibtex-doc}},
@@ -700,7 +700,7 @@
   Title                    = {{NBR} 6025},
 
   Address                  = {Rio de Janeiro},
-  Month                    = set,
+  Month                    = {set},
   Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1989},
 
@@ -929,4 +929,14 @@
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ISO},
   Subtitle                 = {Documentation --- {A}bstracts for publications and documentation}
+}
+
+
+@Misc{luminaria01,
+title={Candeeiros de tecto},
+author={euzinha ué},
+address={aqui né},
+year={2017},
+url={https://goo.gl/DhofqW},
+urlaccessdate={2009-01-31},
 }
