--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 %% abtex2-modelo-trabalho-academico.tex, v-1.9.2 laurocesar
-%% Copyright 2012-2014 by abnTeX2 group at http://abntex2.googlecode.com/ 
+%% Copyright 2012-2017 by abnTeX2 group at http://abntex2.googlecode.com/ 
 %%
 %% This work may be distributed and/or modified under the
 %% conditions of the LaTeX Project Public License, either version 1.3
@@ -47,29 +47,33 @@
         % -- opções da classe memoir --
         12pt,                           % tamanho da fonte
         openright,                      % capítulos começam em pág ímpar (insere página vazia caso preciso)
-        twoside,                        % para impressão em verso e anverso. Oposto a oneside
+        %twoside,                        % para impressão em verso e anverso. Oposto a oneside
+        oneside,
         a4paper,                        % tamanho do papel. 
         % -- opções da classe abntex2 --
-        chapter=TITLE,          % títulos de capítulos convertidos em letras maiúsculas
-        section=TITLE,          % títulos de seções convertidos em letras maiúsculas
+        chapter=TITLE,         % títulos de capítulos convertidos em letras maiúsculas
+        section=TITLE,         % títulos de seções convertidos em letras maiúsculas
         subsection=Title,      % títulos de subseções convertidos em letras maiúsculas
-        %subsubsection=TITLE,% títulos de subsubseções convertidos em letras maiúsculas
+        %subsubsection=TITLE,  % títulos de subsubseções convertidos em letras maiúsculas
         % -- opções do pacote babel --
         english,                        % idioma adicional para hifenização
-        %french,                         % idioma adicional para hifenização
-        %spanish,                        % idioma adicional para hifenização
-        portugues,                         % o último idioma é o principal do documento
+        french,                         % idioma adicional para hifenização
+        spanish,                        % idioma adicional para hifenização
+        portugues,                      % o último idioma é o principal do documento
         %%%%%%%%%%%%
         %eek: colocação da opção para o sumario ter formatação tradicional
         sumario=tradicional             % título no formato tradicional
         ]{abntex2}
 
+
 \usepackage{UFPR}
 \input{00-pacotes}
 \input{00-dados}
 
+% compila o indice
+% ----------------------------------------------------------
 
-
+\makeindex
 % ----------------------------------------------------------
 % Início do documento
 % ----------------------------------------------------------
@@ -78,7 +82,7 @@
 % Adequando o uppercase titulo dos elementos nas suas respectivas legendas
 % Definicoes que n\~ao funcionaram quando colocados no arquivo de estilos ou de pacotes
 
-\renewcommand{\bibname}{\uppercase{REFER\^ENCIAS}}
+\renewcommand{\bibname}{{REFER\^ENCIAS}}
 \renewcommand{\tablename}{TABELA }
 \renewcommand{\figurename}{FIGURA }
 \renewcommand{\figureautorefname}{FIGURA}
@@ -95,37 +99,33 @@
 % sugerido por Youssef Cherem 20170316
 % https://mail.google.com/mail/u/0/?tab=wm#inbox/15ad3fe6f4e5ff1f
 
-
-% ----------------------------------------------------------
 % Introdução (exemplo de capítulo sem numeração, mas presente no Sumário)
 % ----------------------------------------------------------
 \input{cap01}
-% ----------------------------------------------------------
+
 % PARTE DA PREPARAÇÃO DA PESQUISA
 % ----------------------------------------------------------
 %\part{Preparação da pesquisa}
-% ----------------------------------------------------------
 %\input{cap02}
 %
-% ----------------------------------------------------------
+
 % PARTE DOS REFERENCIAIS TEÓRICOS
 % ----------------------------------------------------------
 %\part{Referenciais teóricos}
-% ----------------------------------------------------------
 %\input{cap03}
-%
-% ----------------------------------------------------------
+
 % PARTE DOS RESULTADOS
 % ----------------------------------------------------------
 %\part{Resultados}
-% ----------------------------------------------------------
 %\input{cap05}
-% ----------------------------------------------------------
+
+
 % Finaliza a parte no bookmark do PDF
 % para que se inicie o bookmark na raiz
 % e adiciona espaço de parte no Sumário
 % ----------------------------------------------------------
 %\phantompart
+
 % ---
 % Conclusão (outro exemplo de capítulo sem numeração e presente no sumário)
 % ---
@@ -134,31 +134,30 @@
 % ---
 %\input{cap06}
 
-
-% ----------------------------------------------------------
 % ELEMENTOS PÓS-TEXTUAIS
 % ----------------------------------------------------------
 \postextual
-% ----------------------------------------------------------
 
-% ----------------------------------------------------------
+
 % Referências bibliográficas
 % ----------------------------------------------------------
-\bibliography{referencias}
+%\bibliography{referencias}
 
+
+\printbibliography[heading=bay]
 % ----------------------------------------------------------
+
+
 % Glossário
 % ----------------------------------------------------------
-%
 % Consulte o manual da classe abntex2 para orientações sobre o glossário.
 %
 %\glossary
 
-% ----------------------------------------------------------
 % Apêndices
 % ----------------------------------------------------------
-
-\begin{apendicesenv}
+\ifthenelse{\equal{\terApendice}{Sim}}
+{\begin{apendicesenv}
 
 % Imprime uma página indicando o início dos apêndices
 \partapendices
@@ -185,16 +184,15 @@
 %     A vantagem de se utilizar este procedimento é de suprimi-lo
 %     das compilações enquanto se processa o resto do documento.
 
-%\input{ap01}
+\input{ap01}
 
 \end{apendicesenv}
-% ---
+}{}
 
 
-% ----------------------------------------------------------
 % Anexos
 % ----------------------------------------------------------
-
+\ifthenelse{\equal{\terAnexo}{Sim}}{
 \begin{anexosenv}
 
 % --- Imprime uma página indicando o início dos anexos
@@ -221,16 +219,17 @@
 %     A vantagem de se utilizar este procedimento é de suprimi-lo
 %     das compilações enquanto se processa o resto do documento.
 
- %\input{ax01} 
+ \input{ax01} 
 
 
 \end{anexosenv}
+}{}
 
-%---------------------------------------------------------------------
 % INDICE REMISSIVO
 %---------------------------------------------------------------------
-%\phantompart
-%\printindex
-%---------------------------------------------------------------------
+\ifthenelse{\equal{\terIndiceR}{Sim}}{
+\phantompart
+\printindex
+}{}
 
 \end{document}
